@@ -83,8 +83,8 @@ static ssize_t sky_write(struct gps_device_t *session, char *msg,
         GPSD_LOG(LOG_ERROR, &session->context->errout,
                  "Skytraq: Length error: len %u data_len %zu buf %s\n",
                  len, data_len,
-                 gpsd_hexdump((char *)outbuf, sizeof(outbuf),
-                              buf, data_len));
+                 gps_hexdump((char *)outbuf, sizeof(outbuf),
+                             buf, data_len));
         return -2;
     }
 
@@ -101,7 +101,7 @@ static ssize_t sky_write(struct gps_device_t *session, char *msg,
 
     GPSD_LOG(LOG_IO, &session->context->errout,
              "Skytraq: Writing control MID %02x: %s\n", type,
-             gpsd_hexdump((char *)outbuf, sizeof(outbuf), buf, len));
+             gps_hexdump((char *)outbuf, sizeof(outbuf), buf, len));
     ok = gpsd_write(session, (const char *)buf, len) == len;
 
     return ok;
@@ -1278,8 +1278,8 @@ static gps_mask_t sky_msg_E2(struct gps_device_t *session,
              "Skytraq Beidou D1 subframe PRN %d Subframe %d "
              "length %zd byte:%s\n",
              prn, subf, len,
-             gpsd_hexdump(session->msgbuf, sizeof(session->msgbuf),
-                          bytes, 28));
+             gps_hexdump(session->msgbuf, sizeof(session->msgbuf),
+                         bytes, 28));
 
     return ONLINE_SET;
 }
@@ -1316,8 +1316,8 @@ static gps_mask_t sky_msg_E3(struct gps_device_t *session,
              "Skytraq Beidou D2 subframe PRN %d Subframe %d "
              "length %zd byte:%s\n",
              prn, subf, len,
-             gpsd_hexdump(session->msgbuf, sizeof(session->msgbuf),
-                          bytes, 28));
+             gps_hexdump(session->msgbuf, sizeof(session->msgbuf),
+                         bytes, 28));
 
     return ONLINE_SET;
 }
