@@ -1478,8 +1478,8 @@ static bool aivdm_decode(unsigned char *buf, size_t buflen,
             GPSD_LOG(LOG_INF, &session->context->errout,
                      "AIVDM payload is %zd bits, %zd chars: %s\n",
                      ais_context->bitlen, clen,
-                     gpsd_hexdump(session->msgbuf, sizeof(session->msgbuf),
-                                  ais_context->bits, clen));
+                     gps_hexdump(session->msgbuf, sizeof(session->msgbuf),
+                                 ais_context->bits, clen));
         }
 
         /* clear waiting fragments count */
